--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorDark1">#303030</color>
+    <color name="colorDark2">#444444</color>
+    <color name="colorDarkAlpha">#882C383E</color>
+    <color name="gray">#bbbbbb</color>
+    <color name="blanco">#ffffff</color>
+    <color name="colorPrimary2">#007bff</color>
+    <color name="colorSuccess">#28a745</color>
+    <color name="colorSegundary">#6c757d</color>
+    <color name="colorInfo">#17a2b8</color>
+    <color name="colorDanger">#dc3545</color>
+    <color name="colorWarning">#ffc107</color>
 </resources>
